Rapid Prd/src/objects/Credit_Card_Processing_Statements__c.object
<CustomObject>
    <fields>
        <fullName>AMEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AMEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Ticket_Size__c</fullName>
        <label>Average Ticket Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Debit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EBT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Four_of_MID__c</fullName>
        <label>Last Four of MID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Deposits__c</fullName>
        <label>Number of Batches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Credit Card Processing Statements</relationshipLabel>
        <relationshipName>Credit_Card_Processing_Statements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Processor_Name__c</fullName>
        <label>Processor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receivables_Included_in_Pricing_Visa_M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receivables Included in Pricing - Visa/M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Deposit_Amount_used_For_Pricing__c</fullName>
        <label>Total Credit Card Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Credit Card Processing Statement</label>
    <nameField>
        <displayFormat>CCPST-{00000000}</displayFormat>
        <label>Credit Card Processing Statements Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Processing Statements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>